fixed spacing between chat and menu

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -10,7 +10,7 @@ p, button{
 }
 .TextWelcome{
   margin-left: 30.5%;
-  margin-top: 6.7%;
+  margin-top: 1.5%;
   font-size: 325%;
 }
 
@@ -55,7 +55,7 @@ transition: 0.25s;
       padding: 0.75rem 1rem;
       background: #6A3ECF;
       margin-left: auto;
-      margin-top: 7%;
+      margin-top: 2%;
       color: #fff;
       border: none;
       border-radius: 10px;
@@ -76,5 +76,4 @@ transition: 0.25s;
 }
 .imgchat{
   height: 150px;
-  margin-top: 4%;
 }
